--- a/ifarmo-api/package.json
+++ b/ifarmo-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "preinstall": "npx only-allow pnpm"
   },
   "keywords": [],
   "author": "",
