--- a/ifarmo-client/package.json
+++ b/ifarmo-client/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"preinstall": "npx only-allow pnpm",
+		"preinstall": "npm -g install pnpm && pnpm run build",
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "pnpm build",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,32 +14,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/jsonwebtoken": "^9.0.2",
-		"@types/leaflet": "^1.9.4",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"prettier": "^2.8.0",
+		"@playwright/test": "^1.38.1",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.25.0",
+		"@types/jsonwebtoken": "^9.0.3",
+		"@types/leaflet": "^1.9.5",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-svelte": "^2.33.2",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9"
 	},
 	"type": "module",
 	"dependencies": {
 		"@svelteuidev/composables": "^0.15.3",
 		"@svelteuidev/core": "^0.15.3",
+		"is-safari": "^1.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"leaflet": "^1.9.4",
 		"radix-icons-svelte": "^1.2.1",
-		"sass": "^1.66.1",
+		"sass": "^1.68.0",
 		"svelte-preprocess": "^5.0.4",
 		"svelte-tiny-virtual-list": "^2.0.5"
 	}
