--- a/ifarmo-client/package.json
+++ b/ifarmo-client/package.json
@@ -32,6 +32,7 @@
 		"vite": "^4.4.9"
 	},
 	"type": "module",
+	"platform": "node",
 	"dependencies": {
 		"@svelteuidev/composables": "^0.15.3",
 		"@svelteuidev/core": "^0.15.3",
